--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  margin: 2px;
+  color:antiquewhite;
+  background-color:#181919;
+}
+
 .App {
   text-align: center;
 }
@@ -6,6 +12,8 @@
   height: 40vmin;
   pointer-events: none;
 }
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +43,216 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/* general css */
+
+.icon {
+  height: 50px;
+}
+
+.navbar {
+  font-size: 25px;
+}
+
+.title{
+  text-align: center;
+  font-size: 40px;
+}
+
+/* homescreen css */
+.container {
+  position: relative;
+}
+
+.intro {
+  width: 100%;
+  text-align: center;
+  position:absolute;
+  
+}
+
+.webicon {
+  height: 230px;
+  margin-top: 30px;
+}
+
+.homeInfo {
+  font-size: 40px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+
+
+/* About me css */
+
+.profile {
+  width: 300px;
+  height: 400px;
+}
+
+.description {
+  padding: 20px;
+  font-size: 20px;
+}
+
+.profile-div {
+  display: flex;
+  justify-content: center;
+}
+
+/* project css */
+
+.project {
+  display: flex;
+  justify-content: center;
+}
+
+.project-card {
+  margin: 30px;
+  background-color: #282c34;
+  border-radius: 10px;
+  border: none;
+
+}
+
+.github-div {
+  display: flex;
+  justify-content: center;
+}
+
+.github {
+  height: 50px;
+  margin-top: 18px;
+}
+
+.card:hover img {
+  transform: scale(1.1);
+}
+
+.project-title {
+  font-size: 15px;
+  color: aliceblue;
+}
+
+/* contacts css */
+
+input,
+textarea {
+  border-radius: 20px;
+  border: 3px solid black;
+  box-sizing: border-box;
+  padding: 0.7rem;
+  width: 100%;
+  background-color: black;
+  font-weight: 500;
+  color: whitesmoke;
+}
+
+textarea{
+  height: 200px;
+}
+
+.input-div {
+  width: 80%;
+  margin: 10px;
+  text-align: center;
+}
+
+.email-div{
+  text-align: center;
+}
+
+.input-div,
+.send {
+  width: 480px;
+  margin-bottom: 25px;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.send-icon {
+  height: 50px;
+}
+
+/* Resume css */
+
+.resume-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.skill-div {
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 600px;
+  margin: 0 20px;
+}
+
+.skill {
+  margin-bottom: 50px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  background: black
+}
+
+.tag {
+  padding-top: 0.3rem;
+  padding-bottom: 0.4rem;
+  width: 100%;
+  margin-top: 1.2rem;
+  font-size: 0.9rem;
+}
+
+.tag span {
+  display: inline-block;
+  color: black;
+  font-size: 13px;
+  padding: 0.25rem 0.75rem;
+  border-radius: 100px;
+  margin: 0 6px 6px 0;
+  background: linear-gradient(to right, whitesmoke, lightblue);
+  font-weight: 600;
+  letter-spacing: 0.7px;
+}
+
+.download {
+  width: 180px;
+  height: 42px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  background: linear-gradient(to top, whitesmoke, lightblue);
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
+  color: black;
+}
+
+
+
+
+.download-icon {
+  height: 23px;
+}
+
+/* footer css */
+
+.footer {
+  display: flex;
+  justify-content: right;
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
 }
